Corrected 3 Bugs: 'SaveAs' prompt buttons are now correctly drawn. Dropdown suggestions are now aligned to the left. SaveAs pulldown now has a cursor style defined for the hover event. Efficiency improved a little.

--- a/client/css/jqueryFileTree.css
+++ b/client/css/jqueryFileTree.css
@@ -293,7 +293,7 @@ div.treeTableNewJqi button{
 	padding: 3px 10px 3px 10px;
 	margin: 5px 5px 5px 10px;
 	top:2px;
-	width: 50px;
+	width: auto;
 	position:relative;
 }
 div.treeTableNewJqi button:hover{
